# generative-ai-udacity

./: .gitignore  .gitmodules
2 Generative AI Fundamentals/5 Apply Lightweight Fine-Tuning to a Foundation Model/: LightweightFineTuning.ipynb  readme.md
3 LLM & Text Generation/6 Project: Build Your Own Custom Chatbot/: project.ipynb  readme.md
4 Computer Vision and Gen AI/: 6 Project AI Photo Editing with Inpainting.ipynb  6 Project AI Photo Editing with Inpainting.md
5 Building Generative AI Solutions/1 Introduction to Building Generative Apps/: 1_Exercise_GenAIFeatureDesign.ipynb  2_GenAIFeature.ipynb  3_Exercise_WellnessAgent.ipynb  4_OpenAIFunctionCalling.ipynb  5_Exercise_BuildProjectManagementAssistant.ipynb
5 Building Generative AI Solutions/2 Building Solutions with Vector Databases/Exercise1/solution/: Exercise 1 - Basic Vector Search.ipynb
5 Building Generative AI Solutions/2 Building Solutions with Vector Databases/Exercise1/starter/: Exercise 1 - Basic Vector Search.ipynb  README.md
5 Building Generative AI Solutions/2 Building Solutions with Vector Databases/Exercise2/starter/: Exercise 2 - Embedding Functions.ipynb
5 Building Generative AI Solutions/2 Building Solutions with Vector Databases/Exercise3/starter/: Exercise 3 - Vector Database Basics.ipynb
5 Building Generative AI Solutions/3 Developing Generative Solutions with LangChain/lesson-code/: data-loader.py  vector-index-store.py
5 Building Generative AI Solutions/4 Project Personalized Real Estate Agent/: .env  2.py  GEMINI.md  HomeMatch.py  README.md  pyproject.toml  test_openai.py
(+8 files in other folders)
